[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Buildables/Ladder.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Ladder.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.2582, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0.774582, 9.86091 )

[node name="Ladder" type="Node2D" groups=[
"ladder",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Ladder",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="DetectLadder" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectLadder"]
position = Vector2( 0, -40 )
shape = SubResource( 1 )

[node name="Side" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Side"]
position = Vector2( 48, 0 )
shape = SubResource( 2 )

[node name="Side2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Side2"]
position = Vector2( -48, 0 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="DetectLadder" to="." method="_on_DetectLadder_area_entered"]
[connection signal="area_entered" from="Side" to="." method="_on_Side_area_entered"]
[connection signal="body_entered" from="Side" to="." method="_on_Side_body_entered"]
[connection signal="body_exited" from="Side" to="." method="_on_Side_body_exited"]
[connection signal="area_entered" from="Side2" to="." method="_on_Side2_area_entered"]
[connection signal="body_entered" from="Side2" to="." method="_on_Side2_body_entered"]
[connection signal="body_exited" from="Side2" to="." method="_on_Side2_body_exited"]
